change homepage to index

--- a/question1.html
+++ b/question1.html
@@ -61,7 +61,7 @@
 								<p class="copy">&copy; 2018 | Brainster Codepreneurs Academy. All rights reserved. | Design & Code: <span class="cl-white">Kristijan Bobevski</span>.</p>
 							</div>
 							<div class="col-md-3 col-md-offset-1 text-right col-xs-12 txt-align-media">
-								<p class="home"><a href="homepage.html">Почни од почеток?</a></p>
+								<p class="home"><a href="index.html">Почни од почеток?</a></p>
 								<img src="brain.png" alt="" width="50px">
 							</div>
 						</div>
