--- a/index.html
+++ b/index.html
@@ -67,5 +67,12 @@
 			</div>
 		</div>
 	</div>
+	<script>
+		localStorage.removeItem("1stValue");
+		localStorage.removeItem("2ndValue");
+		localStorage.removeItem("3rdValue");
+		localStorage.removeItem("4thValue");
+		localStorage.removeItem("5thValue");
+	</script>
 </body>
 </html>
