init question changes

--- a/question1.html
+++ b/question1.html
@@ -73,6 +73,7 @@
 
 	<script src="main.js"></script>
 	<script>
+				localStorage.setItem("1stValue", 0);
 			function callback(){
 				localStorage.setItem("1stValue", $('#sliderStatus').val());
 			}
