--- a/question2.html
+++ b/question2.html
@@ -73,6 +73,7 @@
 	
 	<script src="main.js"></script>
 	<script>
+		localStorage.setItem("2ndValue", 0);
 		function callback(){
 				localStorage.setItem("2ndValue", $('#sliderStatus').val());
 			}
