--- a/question3.html
+++ b/question3.html
@@ -74,6 +74,7 @@
 
 	<script src="main.js"></script>
 	<script>
+		localStorage.setItem("3rdValue", 0);
 		function callback(){
 				localStorage.setItem("3rdValue", $('#sliderStatus').val());
 			}
