--- a/question5.html
+++ b/question5.html
@@ -73,6 +73,7 @@
 	
 	<script src="main.js"></script>
 	<script>
+		localStorage.setItem("5thValue", 0);
 		function callback(){
 				localStorage.setItem("5thValue", $('#sliderStatus').val());
 			}
