--- a/question4.html
+++ b/question4.html
@@ -73,6 +73,7 @@
 	
 	<script src="main.js"></script>
 	<script>
+		localStorage.setItem("4thValue", 0);
 		function callback(){
 				localStorage.setItem("4thValue", $('#sliderStatus').val());
 			}
